[package]
name = "lqth"
version = "0.2.0"
description = "Simple but blazingly fast screenshot utility"
edition = "2021"
license = "MIT"
authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
repository = "https://github.com/0x61nas/lqth"
documentation = "https://docs.rs/lqth"
rust-version = "1.72.1"
autobins = false
categories = ["command-line-utilities"]
keywords = ["screenshot", "xscreenshot", "capture"]

[[bin]]
name = "lqth"
path = "src/bin/main.rs"

[dependencies]
thiserror = "1.0.2"
x11 = { version = "2.21", default-features = false, features = ["xlib"] }

[profile.release]
opt-level = 3 # all optimizations
lto = true # LLVM’s link time optimizations. LTO can produce better optimized code, using whole-program analysis, at the cost of longer linking time.
